[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corpus-cluster-explorer"
version = "0.1.0"
description = "Toolkit for loading, preprocessing, and clustering structured text datasets"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Your Name"}
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "scikit-learn>=1.3",
  "gensim>=4.3",
  "pymorphy3>=2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "black>=24.0",
  "ruff>=0.5"
]

[project.scripts]
corpus-explorer = "corpus_cluster_explorer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
